--- a/frontend/styles/scss/style.scss
+++ b/frontend/styles/scss/style.scss
@@ -69,18 +69,85 @@ body {
 
 /*/////////////////////////////////// IMPORT /////////////////////////////////////////////*/
 
-// @import "colors";
-// @import "template";
+@import "colors";
+@import "template";
 
-/*/////////////////////////////// RESPONSIVE MOBIL ///////////////////////////////////////*/
+/*/////////////////////////////// RESPONSIVE MOBIL 320px ///////////////////////////////////////*/
 
 :root {
   font-size: 16px;
 }
 
+/*//////////////////////////////////// FONT-FAMILY ///////////////////////////////////////*/
+// @font-face {
+//   font-family: "Poppins";
+//   src: url("../../assets/fonts/Poppins-Light.ttf");
+// }
+
 /*//////////////////////////////////// BODY //////////////////////////////////////////////*/
+body {
+  z-index: 1;
+  // font-family: "Poppins";
+  // background-image: url("../../assets/imgs/bcg-img.webp");
+  // background-size: cover;
+  // background-position: center;
+}
 
 /*//////////////////////////////////// HEADER ////////////////////////////////////////////*/
+
+header {
+  .navbar-container-desktop {
+    display: none;
+  }
+  .navbar-container-mobile {
+    width: 100vw;
+    height: 60px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #0000005e;
+
+    .logo-container-mobile {
+      margin-left: 10px;
+    }
+
+    .open-burger,
+    .close-burger {
+      margin-right: 10px;
+    }
+
+    .close-burger {
+      display: none;
+    }
+
+    .burger-container {
+      z-index: 2;
+      position: absolute;
+      top: 60px;
+      width: 100%;
+      height: 100vh;
+      display: none;
+      background-color: rgb(45, 247, 237);
+
+      .links-container-burger {
+        width: 100%;
+        padding-top: 160px;
+        display: flex;
+        gap: 120px;
+        flex-direction: column;
+        align-items: center;
+        li {
+          a {
+            color: black;
+            text-transform: uppercase;
+            font-weight: bold;
+          }
+        }
+      }
+    }
+  }
+}
 
 /*//////////////////////////////////// MAIN //////////////////////////////////////////////*/
 main {
@@ -89,14 +156,14 @@ main {
 
 /*//////////////////////////////////// FOOTER ////////////////////////////////////////////*/
 
-/*/////////////////////////////// RESPONSIVE TABLET //////////////////////////////////////*/
+/*/////////////////////////////// RESPONSIVE TABLET 768px //////////////////////////////////////*/
 
 @media (min-width: 768px) {
-  // @import "tablet";
+  @import "tablet";
 }
 
-/*/////////////////////////////// RESPONSIVE DESKTOP /////////////////////////////////////*/
+/*/////////////////////////////// RESPONSIVE DESKTOP 1024px /////////////////////////////////////*/
 
 @media (min-width: 1024px) {
-  // @import "desktop";
+  @import "desktop";
 }
