Favicon Ok + Logo Ok

--- a/frontend/styles/scss/_colors.scss
+++ b/frontend/styles/scss/_colors.scss
@@ -1,7 +1,13 @@
 // BODY //
+$primary-color: #445aff;
+$secondary-color: #fad557;
+$text-color: #252525;
 // ALERT & VALID //
-$alert: red;
-$valid: lime;
+$alert: #fa3457;
+$succes: #78ff81;
 // HEADER //
 //  MAIN //
+$main-bcg: #fafafa;
+$content: #f9f9f9;
 // FOOTER //
+$footer-bcg: #474747;
