--- a/frontend/styles/css/style.css
+++ b/frontend/styles/css/style.css
@@ -74,9 +74,14 @@ body {
 }
 
 /*//////////////////////////////////// FONT-FAMILY ///////////////////////////////////////*/
+@font-face {
+  font-family: "Poppins";
+  src: url("../../assets/fonts/Poppins-Light.ttf");
+}
 /*//////////////////////////////////// BODY //////////////////////////////////////////////*/
 body {
   z-index: 1;
+  font-family: "Poppins";
 }
 
 /*//////////////////////////////////// HEADER ////////////////////////////////////////////*/
@@ -90,17 +95,35 @@ header .navbar-container-mobile {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  background-color: rgba(0, 0, 0, 0.368627451);
+  background-color: #445aff;
 }
-header .navbar-container-mobile .logo-container-mobile {
-  margin-left: 10px;
+header .navbar-container-mobile .logo {
+  width: 40px;
 }
 header .navbar-container-mobile .open-burger,
 header .navbar-container-mobile .close-burger {
-  margin-right: 10px;
+  margin-left: 10px;
 }
 header .navbar-container-mobile .close-burger {
   display: none;
+}
+header .navbar-container-mobile .profil {
+  margin-right: 10px;
+}
+header .navbar-container-mobile .profil-container {
+  position: absolute;
+  padding: 1rem;
+  top: 60px;
+  right: 0;
+  background-color: #fad557;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+header .navbar-container-mobile .profil-container button {
+  text-transform: uppercase;
+  font-weight: bold;
 }
 header .navbar-container-mobile .burger-container {
   z-index: 2;
@@ -109,7 +132,7 @@ header .navbar-container-mobile .burger-container {
   width: 100%;
   height: 100vh;
   display: none;
-  background-color: rgb(45, 247, 237);
+  background-color: #fad557;
 }
 header .navbar-container-mobile .burger-container .links-container-burger {
   width: 100%;
@@ -120,9 +143,9 @@ header .navbar-container-mobile .burger-container .links-container-burger {
   align-items: center;
 }
 header .navbar-container-mobile .burger-container .links-container-burger li a {
-  color: black;
+  color: #252525;
   text-transform: uppercase;
-  font-weight: bold;
+  font-weight: bolder;
 }
 
 /*//////////////////////////////////// MAIN //////////////////////////////////////////////*/
@@ -147,15 +170,23 @@ main {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: #445aff;
   }
   header .navbar-container-desktop .links-container {
     display: flex;
     width: max-content;
     gap: 2rem;
-    background-color: lightblue;
   }
   header .navbar-container-desktop .links-container li a {
-    color: black;
+    color: #252525;
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+  header .navbar-container-desktop .connections-container {
+    display: flex;
+    gap: 10px;
+  }
+  header .navbar-container-desktop .connections-container button {
     text-transform: uppercase;
     font-weight: bold;
   }
