--- a/frontend/styles/scss/style.scss
+++ b/frontend/styles/scss/style.scss
@@ -79,15 +79,15 @@ body {
 }
 
 /*//////////////////////////////////// FONT-FAMILY ///////////////////////////////////////*/
-// @font-face {
-//   font-family: "Poppins";
-//   src: url("../../assets/fonts/Poppins-Light.ttf");
-// }
+@font-face {
+  font-family: "Poppins";
+  src: url("../../assets/fonts/Poppins-Light.ttf");
+}
 
 /*//////////////////////////////////// BODY //////////////////////////////////////////////*/
 body {
   z-index: 1;
-  // font-family: "Poppins";
+  font-family: "Poppins";
   // background-image: url("../../assets/imgs/bcg-img.webp");
   // background-size: cover;
   // background-position: center;
@@ -106,19 +106,40 @@ header {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    background-color: #0000005e;
+    background-color: $primary-color;
 
-    .logo-container-mobile {
-      margin-left: 10px;
+    .logo {
+      width: 40px;
     }
 
     .open-burger,
     .close-burger {
-      margin-right: 10px;
+      margin-left: 10px;
     }
 
     .close-burger {
       display: none;
+    }
+
+    .profil {
+      margin-right: 10px;
+    }
+
+    .profil-container {
+      position: absolute;
+      padding: 1rem;
+      top: 60px;
+      right: 0;
+      background-color: $secondary-color;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+
+      button {
+        text-transform: uppercase;
+        font-weight: bold;
+      }
     }
 
     .burger-container {
@@ -128,7 +149,7 @@ header {
       width: 100%;
       height: 100vh;
       display: none;
-      background-color: rgb(45, 247, 237);
+      background-color: $secondary-color;
 
       .links-container-burger {
         width: 100%;
@@ -139,9 +160,9 @@ header {
         align-items: center;
         li {
           a {
-            color: black;
+            color: $text-color;
             text-transform: uppercase;
-            font-weight: bold;
+            font-weight: bolder;
           }
         }
       }
