--- a/frontend/styles/css/style.css
+++ b/frontend/styles/css/style.css
@@ -89,7 +89,7 @@ header .navbar-container-desktop {
   display: none;
 }
 header .navbar-container-mobile {
-  width: 100vw;
+  padding: 1rem;
   height: 60px;
   display: flex;
   flex-direction: row;
@@ -97,40 +97,51 @@ header .navbar-container-mobile {
   justify-content: space-between;
   background-color: #445aff;
 }
-header .navbar-container-mobile .logo {
+header .navbar-container-mobile .logo-container-mobile {
+  position: absolute;
+  left: calc(50% - 20px);
+}
+header .navbar-container-mobile .logo-container-mobile .logo {
   width: 40px;
 }
 header .navbar-container-mobile .open-burger,
 header .navbar-container-mobile .close-burger {
-  margin-left: 10px;
+  width: 24px;
 }
 header .navbar-container-mobile .close-burger {
   display: none;
 }
-header .navbar-container-mobile .profil {
-  margin-right: 10px;
-}
-header .navbar-container-mobile .profil-container {
+header .navbar-container-mobile .user-container {
+  z-index: 3;
   position: absolute;
   padding: 1rem;
   top: 60px;
   right: 0;
   background-color: #fad557;
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
   gap: 10px;
 }
-header .navbar-container-mobile .profil-container button {
+header .navbar-container-mobile .user-container button {
   text-transform: uppercase;
+  border: 2px solid transparent;
+  padding: 0.5rem 0.7rem;
+  border-radius: 5px;
+  font-size: 0.9rem;
   font-weight: bold;
+  cursor: pointer;
+}
+header .navbar-container-mobile .user-container button:hover {
+  border-color: black;
 }
 header .navbar-container-mobile .burger-container {
   z-index: 2;
   position: absolute;
   top: 60px;
+  left: 0;
   width: 100%;
-  height: 100vh;
+  height: calc(100% - 60px);
   display: none;
   background-color: #fad557;
 }
@@ -147,6 +158,54 @@ header .navbar-container-mobile .burger-container .links-container-burger li a {
   text-transform: uppercase;
   font-weight: bolder;
 }
+header .modal-login-form {
+  display: none;
+  z-index: 3;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 25px;
+  padding: 1rem 0;
+  background-color: #fad557;
+  width: 80%;
+  animation: TopToBottom 1.5s ease-in-out;
+}
+header .modal-login-form form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+header .modal-login-form form .close-modal-login {
+  position: absolute;
+  top: 20px;
+  right: 15px;
+}
+header .modal-login-form form label {
+  color: #252525;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+header .modal-login-form form button {
+  text-transform: uppercase;
+  border: 2px solid transparent;
+  padding: 0.5rem 0.7rem;
+  border-radius: 5px;
+  font-size: 0.9rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+header .modal-login-form form button:hover {
+  border-color: black;
+}
+@keyframes TopToBottom {
+  from {
+    transform: translate(-50%, -230%);
+  }
+  to {
+    transform: translate(-50%, 0);
+  }
+}
 
 /*//////////////////////////////////// MAIN //////////////////////////////////////////////*/
 main {
@@ -155,6 +214,14 @@ main {
 
 /*//////////////////////////////////// FOOTER ////////////////////////////////////////////*/
 /*/////////////////////////////// RESPONSIVE TABLET 768px //////////////////////////////////////*/
+@media (min-width: 768px) {
+  /*//////////////////////////////////// HEADER ////////////////////////////////////////////*/
+  header .modal-login-form {
+    width: 50%;
+  }
+  /*//////////////////////////////////// MAIN //////////////////////////////////////////////*/
+  /*//////////////////////////////////// FOOTER ////////////////////////////////////////////*/
+}
 /*/////////////////////////////// RESPONSIVE DESKTOP 1024px /////////////////////////////////////*/
 @media (min-width: 1024px) {
   :root {
@@ -166,11 +233,13 @@ main {
   }
   header .navbar-container-desktop {
     padding: 1rem;
-    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: space-between;
     background-color: #445aff;
+  }
+  header .navbar-container-desktop .logo-container-desktop .logo {
+    width: 60px;
   }
   header .navbar-container-desktop .links-container {
     display: flex;
@@ -188,7 +257,18 @@ main {
   }
   header .navbar-container-desktop .connections-container button {
     text-transform: uppercase;
+    border: 2px solid transparent;
+    padding: 0.5rem 0.7rem;
+    border-radius: 5px;
+    font-size: 0.9rem;
     font-weight: bold;
+    cursor: pointer;
+  }
+  header .navbar-container-desktop .connections-container button:hover {
+    border-color: black;
+  }
+  header .modal-login-form {
+    width: 50%;
   }
   /*//////////////////////////////////// MAIN //////////////////////////////////////////////*/
   /*//////////////////////////////////// FOOTER ////////////////////////////////////////////*/
