--- a/frontend/styles/scss/style.scss
+++ b/frontend/styles/scss/style.scss
@@ -100,7 +100,7 @@ header {
     display: none;
   }
   .navbar-container-mobile {
-    width: 100vw;
+    padding: 1rem;
     height: 60px;
     display: flex;
     flex-direction: row;
@@ -108,37 +108,37 @@ header {
     justify-content: space-between;
     background-color: $primary-color;
 
-    .logo {
-      width: 40px;
+    .logo-container-mobile {
+      position: absolute;
+      left: calc(50% - 20px);
+      .logo {
+        width: 40px;
+      }
     }
 
     .open-burger,
     .close-burger {
-      margin-left: 10px;
+      width: 24px;
     }
 
     .close-burger {
       display: none;
     }
 
-    .profil {
-      margin-right: 10px;
-    }
-
-    .profil-container {
+    .user-container {
+      z-index: 3;
       position: absolute;
       padding: 1rem;
       top: 60px;
       right: 0;
       background-color: $secondary-color;
-      display: flex;
+      display: none;
       flex-direction: column;
       align-items: center;
       gap: 10px;
 
       button {
-        text-transform: uppercase;
-        font-weight: bold;
+        @include template-btn;
       }
     }
 
@@ -146,8 +146,9 @@ header {
       z-index: 2;
       position: absolute;
       top: 60px;
+      left: 0;
       width: 100%;
-      height: 100vh;
+      height: calc(100% - 60px);
       display: none;
       background-color: $secondary-color;
 
@@ -166,6 +167,47 @@ header {
           }
         }
       }
+    }
+  }
+  .modal-login-form {
+    display: none;
+    z-index: 3;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 25px;
+    padding: 1rem 0;
+    background-color: $secondary-color;
+    width: 80%;
+    animation: TopToBottom 1.5s ease-in-out;
+    form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .close-modal-login {
+        position: absolute;
+        top: 20px;
+        right: 15px;
+      }
+      label {
+        color: $text-color;
+        text-transform: uppercase;
+        font-weight: bold;
+      }
+      button {
+        @include template-btn;
+      }
+    }
+  }
+
+  @keyframes TopToBottom {
+    from {
+      transform: translate(-50%, -230%);
+    }
+    to {
+      transform: translate(-50%, 0);
     }
   }
 }
