--- a/frontend/styles/css/style.css
+++ b/frontend/styles/css/style.css
@@ -104,9 +104,10 @@ header .navbar-container-mobile .logo-container-mobile {
 header .navbar-container-mobile .logo-container-mobile .logo {
   width: 40px;
 }
-header .navbar-container-mobile .open-burger,
-header .navbar-container-mobile .close-burger {
-  width: 24px;
+header .navbar-container-mobile .open-burger::before {
+  border-radius: 5px;
+  border: 1px solid black;
+  padding: 5px;
 }
 header .navbar-container-mobile .close-burger {
   display: none;
@@ -159,7 +160,8 @@ header .navbar-container-mobile .burger-container .links-container-burger li a {
   font-weight: bolder;
 }
 header .modal-login-form {
-  display: none;
+  display: flex;
+  justify-content: center;
   z-index: 3;
   position: absolute;
   top: 30%;
@@ -175,6 +177,18 @@ header .modal-login-form form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 5px;
+}
+header .modal-login-form form .password-login-container {
+  display: flex;
+  align-items: center;
+}
+header .modal-login-form form .password-login-container .show-password-login {
+  display: none;
+}
+header .modal-login-form form .password-login-container .show-password-login,
+header .modal-login-form form .password-login-container .hidden-password-login {
+  position: absolute;
 }
 header .modal-login-form form .close-modal-login {
   position: absolute;
