--- a/frontend/styles/scss/_desktop.scss
+++ b/frontend/styles/scss/_desktop.scss
@@ -50,5 +50,10 @@ header {
 }
 
 /*//////////////////////////////////// MAIN //////////////////////////////////////////////*/
+main {
+  .grid-container {
+    grid-template-columns: repeat(6, 1fr);
+  }
+}
 
 /*//////////////////////////////////// FOOTER ////////////////////////////////////////////*/
