--- a/frontend/styles/scss/_tablet.scss
+++ b/frontend/styles/scss/_tablet.scss
@@ -26,5 +26,10 @@ header {
 }
 
 /*//////////////////////////////////// MAIN //////////////////////////////////////////////*/
+main {
+  .grid-container {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
 
 /*//////////////////////////////////// FOOTER ////////////////////////////////////////////*/
