--- a/frontend/styles/scss/style.scss
+++ b/frontend/styles/scss/style.scss
@@ -274,6 +274,11 @@ header {
 /*//////////////////////////////////// MAIN //////////////////////////////////////////////*/
 main {
   flex: 1;
+
+  .grid-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
   .error404 {
     background-image: url("../../assets/imgs/404.jpg");
     background-size: cover;
