add register form volunteers

--- a/frontend/styles/css/style.css
+++ b/frontend/styles/css/style.css
@@ -281,6 +281,7 @@ header .modal-login-form .login-admin-form button:hover {
 /*//////////////////////////////////// MAIN //////////////////////////////////////////////*/
 main {
   flex: 1;
+  /* ////////////////////////////////////REGISTER FORM///////////////////////////////////////*/
 }
 main .error404 {
   background-image: url("../../assets/imgs/404.jpg");
