--- a/frontend/styles/scss/style.scss
+++ b/frontend/styles/scss/style.scss
@@ -281,6 +281,8 @@ main {
     width: 100vw;
     height: 100%;
   }
+
+/* ////////////////////////////////////REGISTER FORM///////////////////////////////////////*/
 }
 
 /*//////////////////////////////////// FOOTER ////////////////////////////////////////////*/
@@ -296,3 +298,4 @@ main {
 @media (min-width: 1024px) {
   @import "desktop";
 }
+
