add form new event on adminboard + display event csv

--- a/frontend/styles/scss/_desktop.scss
+++ b/frontend/styles/scss/_desktop.scss
@@ -40,6 +40,8 @@ header {
 
       button {
         @include template-btn;
+        background-color: white;
+        color: black;
       }
     }
   }
