--- a/frontend/styles/css/style.css
+++ b/frontend/styles/css/style.css
@@ -107,7 +107,7 @@ header .navbar-container-mobile .logo-container-mobile .logo {
 header .navbar-container-mobile .open-burger::before {
   border-radius: 5px;
   border: 1px solid black;
-  padding: 5px;
+  padding: 2px 5px;
 }
 header .navbar-container-mobile .close-burger {
   display: none;
@@ -116,6 +116,7 @@ header .navbar-container-mobile .user-container {
   z-index: 3;
   position: absolute;
   padding: 1rem;
+  border-radius: 5px;
   top: 60px;
   right: 0;
   background-color: #fad557;
@@ -293,7 +294,6 @@ header .modal-login-form .login-admin-form button:hover {
 /*//////////////////////////////////// MAIN //////////////////////////////////////////////*/
 main {
   flex: 1;
-  /* ////////////////////////////////////REGISTER FORM///////////////////////////////////////*/
 }
 main .grid-container {
   display: grid;
@@ -305,6 +305,92 @@ main .error404 {
   background-position: center;
   width: 100vw;
   height: 100%;
+}
+main .adminboard-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
+main .adminboard-container ul {
+  padding-top: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 20px;
+}
+main .adminboard-container ul li button {
+  text-transform: uppercase;
+  background-color: #445aff;
+  padding: 0.5rem 0.7rem;
+  border-radius: 5px;
+  font-size: 0.9rem;
+  font-weight: bold;
+  color: white;
+  cursor: pointer;
+  transition: 0.5s background-color;
+}
+main .adminboard-container ul li button:hover {
+  background-color: #474747;
+  transition: 0.5s background-color;
+}
+main .adminboard-container ul li button:first-child {
+  height: 63px;
+}
+main .adminboard-container .events-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+main .adminboard-container .events-container h1 {
+  text-align: center;
+}
+main .adminboard-container .events-container table {
+  border-collapse: collapse;
+  border: 2px solid black;
+  background-color: #445aff;
+}
+main .adminboard-container .events-container table thead tr th {
+  color: white;
+  padding: 0;
+}
+main .adminboard-container .events-container table tbody tr td {
+  color: white;
+  padding: 0 5px;
+}
+main .adminboard-container .form-new-event {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+main .adminboard-container .form-new-event form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+main .adminboard-container .form-new-event form label {
+  text-transform: capitalize;
+  font-weight: bold;
+}
+main .adminboard-container .form-new-event form button {
+  text-transform: uppercase;
+  background-color: #445aff;
+  padding: 0.5rem 0.7rem;
+  border-radius: 5px;
+  font-size: 0.9rem;
+  font-weight: bold;
+  color: white;
+  cursor: pointer;
+  transition: 0.5s background-color;
+  margin-top: 5px;
+}
+main .adminboard-container .form-new-event form button:hover {
+  background-color: #474747;
+  transition: 0.5s background-color;
 }
 main .admin-container .form-admin-container {
   display: flex;
@@ -410,6 +496,8 @@ main .admin-container .form-admin-container form button:hover {
     color: white;
     cursor: pointer;
     transition: 0.5s background-color;
+    background-color: white;
+    color: black;
   }
   header .navbar-container-desktop .connections-container button:hover {
     background-color: #474747;
