add success page & profil page

--- a/frontend/styles/scss/style.scss
+++ b/frontend/styles/scss/style.scss
@@ -388,7 +388,246 @@ main {
       }
     }
   }
+
+  /***************************REGISTER FORM****************************/
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+
+  .registerFormTitle {
+    margin-top: 80px;
+    margin-bottom: 20px;
+    word-break: break-word;
+  }
+
+  .titleUnderline {
+    width: 12%;
+    height: 1px;
+    background: $footer-bcg;
+    margin-bottom: 30px;
+  }
+
+  .containerFormCompletionIndicator {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 105px;
+    height: 30px;
+    gap: 5px;
+    margin-bottom: 20px;
+
+    .formCompletionIndicator1, .formCompletionIndicator2, .formCompletionIndicator3 {
+      height: 30px;
+      width: 30px;
+      border-radius: 50%;
+      background-color: $primary-color;
+    }
+  }
+
+
+  .containerForm {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: $content;
+    padding: 25px;
+    margin: 25px 25px 80px;
+    gap: 10px;
+    box-shadow: 4px 4px 4px 2px lightgray;
+
+    form {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      gap: 25px;
+      width: 100%;
+
+      .formPart1, .formPart2, .formPart3 {
+        display: none;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 10px;
+
+        input {
+          width: 100%;
+          border-radius: 5px;
+          border: none;
+          height: 30px;
+          border: 1px solid lightgray;
+          background-color: $main-bcg;
+        }
+
+        input:invalid {
+          border: 1px solid $alert;
+        }
+
+        select {
+          width: 100%;
+          height: 30px;
+          border-radius: 1px;
+          border: none;
+          border: 1px solid lightgray;
+          background-color: #F9F9F9;
+        }
+
+      }
+
+      .formPart1 {
+        display: flex;
+      }
+
+      .formPart2 {
+        display: flex;
+      }
+
+      .formPart3 {
+        display: flex;
+      }
+
+      .submit {
+        @include template-btn;
+        border: none;
+      }
+    }
+
+    .following {
+      @include template-btn;
+      border: none;
+    }
+  }
+
+  /***********************REGISTER SUCCESS*****************************/
+  .successTitle {
+    color: $succes;
+    margin-bottom: 30px;
+  }
+
+  .containerId {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 50px;
+    gap: 40px;
+    background-color: $content;
+    margin: 25px;
+    box-shadow: 4px 4px 4px 2px lightgray;
+
+    .userId {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: white;
+      border: 1px solid $footer-bcg;
+      padding: 25px;
+    }
+  }
+  .finished {
+    @include template-btn;
+    border: none;
+  }
+
+  /********************************PROFIL**********************************/
+  .topProfil {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .metaInfos {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    gap: 50px;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    padding: 4%;
+
+    .personalInfos, .availability, .expression {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      flex-direction: column;
+      width: 320px;
+      height: 400px;
+      background-color: $content;
+      box-shadow: 4px 4px 4px 2px lightgray;
+
+      .titleProfil {
+        width: 100%;
+        height: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid $footer-bcg;
+        border-radius: 2px;
+      }
+
+      .infosProfil {
+        display: flex;
+        justify-content: center;
+        align-items: start;
+        flex-direction: column;
+        height: 320px;
+        width: 100%;
+        gap: 15px;
+      
+        p {
+          margin-left: 15px;
+        }
+      } 
+    }
+  }
+
+  .metaMissions {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    width: 100%;
+    border-radius: 2px;
+    background-color: $content;
+    box-shadow: 4px 4px 4px 2px lightgray;
+    margin-top: 60px;
+
+    .titleMissions {
+      width: 100%;
+      height: 80px;
+      border: 1px solid black;
+      border-radius: 2px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .myMissions {
+      width: 100%;
+      padding: 25px;
+      height: 500px;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      align-items: center;
+      gap: 60px;
+      background-color: $content;
+    }
+  }
+
+  
 }
+
+
+
 
 /*//////////////////////////////////// FOOTER ////////////////////////////////////////////*/
 
@@ -403,3 +642,4 @@ main {
 @media (min-width: 1024px) {
   @import "desktop";
 }
+
